<resources>
    <string name="app_name">ProfileCreator</string>

    <string name="profile_creation">Profile Creation</string>
    <string name="creation_help_text">Use the form below to submit your portfolio. An email and password are required.</string>
    <string name="tap_text">Tap to add\navatar</string>
    <string name="profile_picture">Profile picture</string>

    <string name="first_name_hint">First name</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="website_hint">Website</string>
    <string name="submit_text">Submit</string>

    <string name="hello_text">Hello!</string>
    <string name="hello_text_with_name">Hello, %s!</string>
    <string name="confirmation_help_text">Your super-awesome portfolio has been successfully submitted! The preview below is what the community will see!</string>
    <string name="website_confirmation_text"><u>%s</u></string>
    <string name="sign_in">Sign In</string>
</resources>
