<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/profile_creation" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/help_text_margin_top"
        android:textColor="@color/help_text_color"
        android:textSize="@dimen/help_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text"
        tools:text="@string/creation_help_text" />

    <Button
        android:id="@+id/tap_view"
        android:layout_width="@dimen/avatar_view_width"
        android:layout_height="@dimen/avatar_view_height"
        android:layout_marginTop="@dimen/avatar_view_margin"
        android:layout_marginStart="@dimen/avatar_view_margin"
        android:layout_marginEnd="@dimen/avatar_view_margin"
        android:background="@drawable/avatar_view_background"
        android:contentDescription="@string/tap_text"
        android:gravity="center_vertical"
        android:text="@string/tap_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_text"/>

    <ImageView
        android:id="@+id/avatar_view"
        android:layout_width="@dimen/avatar_view_width"
        android:layout_height="@dimen/avatar_view_height"
        android:layout_marginTop="@dimen/avatar_view_margin"
        android:layout_marginBottom="@dimen/avatar_view_margin_bottom"
        android:adjustViewBounds="true"
        android:background="@drawable/avatar_view_background"
        android:contentDescription="@string/profile_picture"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_default_avatar"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tap_view"
        tools:src="@drawable/ic_default_avatar" />
</androidx.constraintlayout.widget.ConstraintLayout>
